--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,13 +2,13 @@ name: Build
 
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    tags: ["v*"]
 
 jobs:
   build:
     runs-on: windows-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-dotnet@v4
@@ -19,3 +19,8 @@ jobs:
         with:
           name: aim
           path: bin/Release/net10.0-windows/win-x64/publish/
+      - name: Create release
+        if: startsWith(github.ref, 'refs/tags/v')
+        run: gh release create ${{ github.ref_name }} bin/Release/net10.0-windows/win-x64/publish/aim.exe --title ${{ github.ref_name }} --generate-notes
+        env:
+          GH_TOKEN: ${{ github.token }}
