--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: "10.0.x"
-      - run: dotnet publish -r win-x64 -c Release --self-contained true -p:PublishSingleFile=true -p:PublishReadyToRun=true
+      - run: dotnet publish -r win-x64 -c Release --self-contained false -p:PublishSingleFile=true
       - uses: actions/upload-artifact@v4
         with:
           name: aim
